@@ -297,6 +297,7 @@ pluseq6.test \
 pluseq7.test \
 pluseq8.test \
 pluseq9.test \
+pluseq10.test \
 postproc.test \
 ppf77.test \
 pr2.test \
