@@ -1,0 +1,57 @@
+#! /bin/sh
+# Copyright (C) 2002  Free Software Foundation, Inc.
+#
+# This file is part of GNU Automake.
+#
+# GNU Automake is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2, or (at your option)
+# any later version.
+#
+# GNU Automake is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with autoconf; see the file COPYING.  If not, write to
+# the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
+# Boston, MA 02111-1307, USA.
+
+# Test for += and backslashes.
+# Reported by Ralf Corsepius.
+
+. ./defs || exit 1
+
+set -e
+
+cat >>configure.in <<EOF
+AM_CONDITIONAL(A, true)
+AM_CONDITIONAL(B, false)
+AC_OUTPUT
+EOF
+
+cat > Makefile.am << 'END'
+foo =  0.h
+if A
+foo += a0.h \
+  a1.h
+foo += a2.h \
+  a3.h
+endif
+if B
+foo += b0.h \
+  b1.h
+endif
+
+print:
+	@echo BEG: $(foo) :END
+END
+
+$ACLOCAL
+$AUTOCONF
+$AUTOMAKE
+./configure
+$MAKE print >stdout
+cat stdout
+grep 'BEG: 0.h a0.h a1.h a2.h a3.h :END' stdout
